--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,12 +1,38 @@
-<p>
-  <% if(locals.user && locals.user.id==comment.user.id){ %>
-    <small>
-      <a href="/comments/destroy/<%=comment._id%>">X </a>
-    </small>
-    <% } %>
-      <%= comment.content %>
-        <br>
-        <small>
-          <%= comment.user.name %>
-        </small>
-</p>
+<div id="comment-<%= comment.id %>" class="post-comment-item">
+  <div class="post-comment-content">
+    <%= comment.content %>
+  </div>
+
+  <div class="post-comment-header">
+    <span class="post-comment-author">
+      <%= comment.user.name %>
+    </span>
+    <div class="post-actions">
+      <button class="post-like no-btn">
+        <!-- <% if(false){ %>
+          <i class="fas fa-thumbs-up"></i>
+          <% }else{ %> -->
+        <img src="https://image.flaticon.com/icons/svg/1077/1077035.svg" alt="likes-icon" />
+        <!-- <% } %> -->
+        <span class="post-comment-likes">
+          <%= comment.likes.length %>Likes
+        </span>
+      </button>
+    </div>
+
+    <% if(locals.user && locals.user.id==comment.user){ %>
+      <button class="delete-btn no-btn">
+        <a class="delete-comment-btn" href="/comments/destroy/<%= comment._id %>"><i class="fas fa-times"></i></a>
+      </button>
+      <% } %>
+  </div>
+
+</div>
+<% if(locals.user){ %>
+  <a class="toggle-like-button" data-likes="<%= comment.likes.length %>"
+    href="/likes/toggle/?id=<%=comment._id%>&type=Comment">
+    <%= comment.likes.length %>Likes
+  </a>
+  <% }else{ %>
+    <%= comment.likes.length %>Likes
+      <% } %>
