--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,19 +1,38 @@
-<header>
-  header
-  <ul>
-    <% if(locals.user){ %>
-      <li>
-        <a href="/users/profile">
-          <%= user.name %>
+<header id="layout-header">
+  <nav>
+    <div class="mini-logo">
+      <p>
+        <a href='/'>
+          <img class="img img-rounded" src="https://ninjasfiles.s3.amazonaws.com/0000000000003454.png" alt="logo" />
         </a>
-      </li>
-      <li><a href="/users/sign-out">Sign Out</a></li>
+      </p>
+    </div>
+    <div class="search-container">
+      <img class="search-icon" src="https://image.flaticon.com/icons/svg/483/483356.svg" alt="search-icon" />
+      <input placeholder="Search" />
+    </div>
+    <div class="auth-links">
+      <ul>
+        <% if(locals.user){ %>
+          <li>
+            <a href="/users/profile/<%= user.id %>">
+              <img class="rounded-circle" src="<%= locals.user.avatar %>" alt="user-dp" id="user-dp" />
+            </a>
+          </li>
+          <li>
+            <a href="/users/profile/<%= user.id %> ">
+              <%= user.name %>
+            </a>
+          </li>
+          <li><a href="/users/sign-out">Sign Out</a></li>
 
-      <% }else{ %>
-        <li><a href="/users/sign-in">
-            Sign In</a></li>
+          <% }else{ %>
+            <li><a href="/users/sign-in">
+                Sign In</a></li>
 
-        <li><a href="/users/sign-up">Sign Up</a></li>
-        <% } %>
-  </ul>
+            <li><a href="/users/sign-up">Sign Up</a></li>
+            <% } %>
+      </ul>
+    </div>
+  </nav>
 </header>
