--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,6 +1,23 @@
-<h1>Sign in</h1>
-<form action="/users/create-session" method="POST">
-  <input type="email" name="email" placeholder="Email" required>
-  <input type="password" name="password" placeholder="Password" required>
-  <input type="submit" value="Sign In">
+<link rel="stylesheet" type="text/css" href="<%= assetPath('/css/auth.css') %>">
+<form action="/users/create-session" method="POST" class="login-form">
+  <span class="login-signup-header">Log In</span>
+
+  <% if(false){ %>
+    <div class="alert error-dailog">Error</div>
+    <% } %>
+
+      <div class="field">
+        <input type="email" name="email" placeholder="Enter Email" required>
+      </div>
+      <div class="field">
+        <input type="password" name="password" placeholder="Password" required>
+      </div>
+      <div class="field">
+        <button type="submit">Sign In
+        </button>
+      </div>
 </form>
+
+<p style="text-align: center;">
+  <a href="/users/auth/google">Google Sign In/Sign Up</a>
+</p>
