--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -115,8 +115,10 @@
   flex-direction: column;
   padding-left: 12px; }
 
-.post-avatar img {
-  height: 40px; }
+.post-avatar a {
+  height: 40px;
+  font-size: 24px;
+  margin-top: 4px; }
 
 .post-avatar .post-author {
   color: #616161;
