--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -68,7 +68,7 @@
 }
 
 /* CREATEPOST */
-.feed{
+.feed {
   flex-grow: 0.8;
   flex-direction: column;
 }
@@ -132,8 +132,10 @@
   flex-direction: column;
   padding-left: 12px;
 }
-.post-avatar img {
+.post-avatar a{
   height: 40px;
+  font-size: 24px;
+  margin-top: 4px;
 }
 .post-avatar .post-author {
   color: #616161;
@@ -254,10 +256,10 @@
   cursor: pointer;
 }
 
-.delete-btn{
+.delete-btn {
   margin-left: auto;
 }
-.delete-post-btn{
+.delete-post-btn {
   color: black;
-  font-size:larger;
+  font-size: larger;
 }
