--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -8,7 +8,7 @@
       </p>
     </div>
     <div class="search-container">
-      <img class="search-icon" src="https://image.flaticon.com/icons/svg/483/483356.svg" alt="search-icon" />
+      <!-- <img class="search-icon" src="https://image.flaticon.com/icons/svg/483/483356.svg" alt="search-icon" /> -->
       <input placeholder="Search" />
     </div>
     <div class="auth-links">
