--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,44 +1,57 @@
-#layout-header{
-  nav{
-      display: flex;
-      background: #6200ee;
-      justify-content: space-between;
-      padding: 16px 10px;
-    //   background: #2196f3;
-      color: white;
-      box-shadow: 1px 1px 1px 1px lightgrey;
-
-      .mini-logo{
-          p{
-              margin: 5px;
-              font-size: 1.4rem;
-              font-weight: bold;
-          }
-      }
-
-      .auth-links{
-          ul{
-              margin: 5% 5px;
-              display: flex;
-              list-style: none;
-              li{
-                  margin-right: 10px;
-              }
-          }
-      }
-
-      a{
-          color: white;
-          text-decoration: none;
-      }
-    
-  }
+/* NAVBAR */
+.nav {
+  display: flex;
+  background: #6200ee;
+  padding: 10px 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+.logo {
+  color: #fff;
+  font-size: 35px;
+}
+.logo-icons {
+  font-size: 40px;
+  color: #ece60e;
+}
+nav #user-dp {
+  height: 40px;
+}
+nav .user {
+  display: flex;
+  align-items: center;
+}
+nav span {
+  margin-left: 10px;
+}
+nav .right-nav {
+  display: flex;
+  color: #fff;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 22px;
+}
+nav .nav-links ul {
+  display: flex;
+  list-style-type: none;
+}
+nav .nav-links ul li {
+  padding: 0 4px;
+}
+nav .nav-links ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+nav .nav-links ul li a:hover {
+  text-decoration: underline;
+}
+nav .nav-links ul li:hover {
+  cursor: pointer;
 }
 
-#user-dp {
-    height: 40px;
-    margin-top: -9px;
-  }
+
+
 .search-container {
     flex-grow: 0.5;
     /* padding: 0 20px; */
