--- a/views/reset_password.ejs
+++ b/views/reset_password.ejs
@@ -1,4 +1,4 @@
-<link type="text/css" rel="stylesheet" href="<%= assetPath('css/auth.css') %>" />
+<link type="text/css" rel="stylesheet" href="<%= assetPath('/css/auth.css') %>" />
 
 <form action="/auth/reset?accessToken=<%=accessToken%>" method="POST" class="login-form">
   <span class="login-signup-header">Change Password</span>
