--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -30,16 +30,20 @@
 
     <div class="post-actions">
       <button class="post-like no-btn">
-        <% if(false){ %>
-          <!-- <img src="https://image.flaticon.com/icons/svg/1076/1076984.svg" alt="likes-icon" /> -->
-          <% }else{ %>
-            <i class="fas fa-heart"></i>
-            <!-- <img src="https://image.flaticon.com/icons/svg/1077/1077035.svg" alt="likes-icon" /> -->
-            <% } %>
+        <a data-likes="<%= post.likes.length %>" class="toggle-like-button"
+          href="/likes/toggle/?id=<%=post._id%>&type=Post">
+          <% let flag=false %>
+            <% for(let like of post.likes){ %>
+              <% if(like.user==locals.user.id){ %>
+                <% flag=true %>
+                  <% } %>
+                    <% } %>
 
-              <span>
-                <%= post.likes.length %>
-              </span>
+                      <span>
+                        <%= post.likes.length %>
+                      </span>
+                      <i class="fas fa-heart"></i>
+        </a>
       </button>
 
       <div class="post-comment-icon">
