Comments likes added via ajax

--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -34,7 +34,7 @@
           href="/likes/toggle/?id=<%=post._id%>&type=Post">
           <% let flag=false %>
             <% for(let like of post.likes){ %>
-              <% if(like.user==locals.user.id){ %>
+              <% if(like.user==locals.user){ %>
                 <% flag=true %>
                   <% } %>
                     <% } %>
