--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -12,7 +12,7 @@
   <div class="right-nav">
     <% if(locals.user){ %>
       <div class="user">
-        <a href="/users/profile/<%= user.id %>">
+        <a href="/users/profile?id=<%= user.id %>">
           <!-- <img class="rounded-circle" src="<%= locals.user.avatar %>" alt="user-dp" id="user-dp" /> -->
 
           <% if(locals.user.avatar==undefined){ %>
@@ -29,7 +29,7 @@
           <ul>
             <% if(locals.user){ %>
               <li>
-                <a href="/users/profile/<%= user.id %> ">
+                <a href="/users/profile?id=<%= locals.user._id %> ">
                   <%= user.name %>
                 </a>
               </li>
