--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
       </div>
 
       <div id="posts-list-container" class="posts-list">
-        <% for(post of posts){ %>
+        <% for(i of posts){ %>
 
           <%- include('_post') -%>
 
@@ -24,36 +24,56 @@
   <% if(locals.user){ %>
     <div class="friends-list">
       <div class="header">Friends</div>
+      <% if(locals.user.friends.length == 0) {%>
+      <div class="no-friends">No friends found!</div>
+      <% }else{ %> 
+        <% for(friends of locals.user.friends){ %> 
 
-      <% if(locals.user.friendships.length==0){ %>
-        <div className="no-friends">No friends found!</div>
-        <% }else{ %>
-          <% for(friends of locals.user.friends){ %>
+          <%if(friends.from_user.id == locals.user.id) {%>
             <div>
-              <a class="friends-item" href="/user/">
+                <a class="friends-item" href="/users/profile?id=<%=friends.to_user._id%>">
                 <div class="friends-img">
-                  <img src="https://image.flaticon.com/icons/svg/2154/2154651.svg" alt="user-pic">
-                </div>
-                <div class="friends-name">
-                  <%= friends.to_user.name %>
-                </div>
+                <% if(friends.to_user.avatar == undefined){ %>
+                <img class="rounded-circle" id="user-dp"
+                  src="https://cdn-icons-png.flaticon.com/512/456/456212.png"
+                  alt="logo"/>
+                <% }else{%>
+                  <img
+                  class="rounded-circle" id="user-dp"
+                  src="<%= friends.to_user.avatar %>"
+                  alt="logo"/>
+                <% } %>
+              </div>
+              <div class="friends-name"><%= friends.to_user.name %></div>
               </a>
             </div>
-            <% } %>
-              <% if(friends.to_user.id==locals.user.id){ %>
-                <div>
-                  <a class="friends-item" href="/user/">
-                    <div class="friends-img">
-                      <img src="https://image.flaticon.com/icons/svg/2154/2154651.svg" alt="user-pic">
-                    </div>
-                    <div class="friends-name">
-                      <%= friends.from_user.name %>
-                    </div>
-                  </a>
-                </div>
+          <%}%> 
+
+          <% if(friends.to_user.id == locals.user.id) {%>
+          <div>
+            <a class="friends-item" href="/users/profile?id=<%=friends.from_user._id%>">
+              <div class="friends-img">
+                <% if(friends.from_user.avatar == undefined){ %>
+                  <img
+                  class="rounded-circle" id="user-dp"
+                  src="https://cdn-icons-png.flaticon.com/512/456/456212.png"
+                  alt="logo"/>
+                <% }else{%>
+                    <img
+                    class="rounded-circle" id="user-dp"
+                    src="<%= friends.from_user.avatar %>"
+                    alt="logo"/>
                 <% } %>
-                  <% } %>
-                    <% } %>
+              </div>
+              <div class="friends-name"><%= friends.from_user.name %></div>
+            </a>
+          </div>
+          <%}%> 
+
+        <%}%> 
+    <%}%>
+    </div>
+<%}%>
 
     </div>
     <%- include('_chat_box') -%>
