--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,9 +21,9 @@
   <%- include('_header'); %>
     <!-- body is inbuilt provided by layouts and it insert all the content of page here,then send this page to browser-->
     <!-- this whole file is wrapper to body -->
-    <main id="layout-main">
+    <!-- <main id="layout-main"> -->
       <%- body %>
-    </main>
+    <!-- </main> -->
     <%- include('_footer'); %>
 
       <%- script %>
