--- a/views/_chat_box.ejs
+++ b/views/_chat_box.ejs
@@ -3,10 +3,10 @@
   <div id="user-chat-box">
     <ul id="chat-messages-list">
       <li class="other-message">
-        <span>Other message</span>
+        <!-- <span>Other message</span> -->
       </li>
       <li class="self-message">
-        <span>Self message</span>
+        <!-- <span>Self message</span> -->
       </li>
     </ul>
 
