--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -43,12 +43,12 @@
 
                     <% if(flag) {%>
                       <img
-                        src="https://image.flaticon.com/icons/svg/1076/1076984.svg"
+                        src="https://cdn-icons-png.flaticon.com/512/633/633991.png"
                         alt="likes-icon"
                       />
                     <% } else{%>
                        <img
-                        src="https://image.flaticon.com/icons/svg/1077/1077035.svg"
+                        src="https://cdn-icons-png.flaticon.com/512/633/633991.png"
                         alt="likes-icon"
                       />
                     <% } %>
