--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -73,6 +73,7 @@
   border: 1px solid #e0e0e0;
   box-sizing: border-box;
   border-radius: 4px;
+  height: 10%;
 }
 
 .create-post > div {
@@ -83,7 +84,7 @@
 }
 
 .create-post textarea {
-  height: 90px;
+  height: 75%;
   padding: 10px;
   width: 100%;
   box-sizing: border-box;
@@ -95,9 +96,9 @@
 }
 
 #add-post-btn {
-  width: 112px;
-  height: 42px;
-  left: 111.5px;
+  width: 15%;
+  height: 25%;
+  float: right;
   top: 0px;
   background: #ef7917;
   border-radius: 3px;
@@ -298,4 +299,7 @@
 .delete-post-btn {
   color: black;
   font-size: larger;
+}
+.comment-avtar {
+  height: 40px;
 }
