Removes bugs for heroku deploy

--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -12,8 +12,11 @@
           <img
           class="rounded-circle comment-avtar"
           src="<%=comment.user.avatar%>"
-          alt="logo"
-        />
+          alt="logo" style="
+          height: 42px;
+          width: 39px;
+          border-radius: 36%;
+      " />
         <% } %>
       </a>
       </span>
