--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -8,6 +8,7 @@
             <img src="<%= i.user.avatar %>" alt="logo" style="
             height: 42px;
             width: 39px;
+            border-radius: 36%;
         " />
             <% } %>
       </a>
