--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,12 +3,10 @@
   padding: 20px 50px;
   display: flex;
   width: 80%;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 
 .home .posts-list {
-  flex-grow: 0.8;
-}
+  flex-grow: 0.8; }
 
 .friends-list {
   background: #fff;
@@ -19,27 +17,22 @@
   margin-top: 20px;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
-  overflow-y: scroll;
-}
+  overflow-y: scroll; }
 
 .friends-list .header {
   border-bottom: 1px solid #e0e0e0;
   font-weight: 600;
   font-size: 16px;
   color: #424242;
-  padding: 20px;
-}
+  padding: 20px; }
 
 .friends-list .friends-img img {
-  height: 40px;
-  border-radius: 70%;
-}
+  height: 40px; }
 
 .no-friends {
   display: flex;
   justify-content: center;
-  margin: 20px 0;
-}
+  margin: 20px 0; }
 
 .friends-item {
   display: flex;
@@ -50,41 +43,34 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 22px;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 .friends-item:hover {
   cursor: pointer;
-  background-color: #f1f1f1;
-}
+  background-color: #f1f1f1; }
 
 .friends-name {
-  padding: 0 10px;
-}
+  padding: 0 10px; }
 
 /* CREATEPOST */
 .feed {
   flex-grow: 0.8;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .create-post {
   background: white;
   border: 1px solid #e0e0e0;
   box-sizing: border-box;
-  border-radius: 4px;
-  height: 10%;
-}
+  border-radius: 4px; }
 
 .create-post > div {
   padding: 10px;
   border-top: 1px solid #d0d0d0;
   display: flex;
-  justify-content: flex-end;
-}
+  justify-content: flex-end; }
 
 .create-post textarea {
-  height: 75%;
+  height: 90px;
   padding: 10px;
   width: 100%;
   box-sizing: border-box;
@@ -92,59 +78,47 @@
   border: none;
   resize: none;
   border-top-right-radius: 3px;
-  border-top-left-radius: 3px;
-}
+  border-top-left-radius: 3px; }
 
 #add-post-btn {
-  width: 15%;
-  height: 25%;
-  float: right;
+  width: 112px;
+  height: 42px;
+  left: 111.5px;
   top: 0px;
   background: #ef7917;
   border-radius: 3px;
   color: #fff;
-  font-size: 16px;
-}
+  font-size: 16px; }
 
 #add-post-btn:focus,
 .create-post textarea:focus {
-  outline: none;
-}
+  outline: none; }
 
 #add-post-btn:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .post-wrapper {
   border: 1px solid #e0e0e0;
   box-sizing: border-box;
   border-radius: 4px;
   margin-top: 20px;
-  background: #fff;
-}
+  background: #fff; }
 
 .post-header {
-  padding: 10px 10px;
-}
+  padding: 10px 10px; }
 
 .post-avatar {
-  display: flex;
-}
+  display: flex; }
 
 .post-avatar > div {
   display: flex;
   flex-direction: column;
-  padding-left: 12px;
-}
+  padding-left: 12px; }
 
 .post-avatar a {
   height: 40px;
   font-size: 24px;
-  margin-top: 4px;
-}
-.post-avatar img {
-  border-radius: 30%;
-}
+  margin-top: 4px; }
 
 .post-avatar .post-author {
   color: #616161;
@@ -152,8 +126,7 @@
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
-  line-height: 22px;
-}
+  line-height: 22px; }
 
 .post-avatar .post-time {
   /* font-family: Open Sans; */
@@ -161,8 +134,7 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 19px;
-  color: #9e9e9e;
-}
+  color: #9e9e9e; }
 
 .post-content {
   /* font-family: Open Sans; */
@@ -171,8 +143,7 @@
   font-size: 16px;
   line-height: 22px;
   color: #424242;
-  margin-top: 15px;
-}
+  margin-top: 15px; }
 
 .post-actions {
   padding: 5px;
@@ -184,36 +155,29 @@
   line-height: 19px;
   color: #616161;
   border-right: none;
-  border-left: none;
-}
+  border-left: none; }
 
 .post-actions img {
-  height: 18px;
-}
+  height: 18px; }
 
 .post-actions img:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .post-like {
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
 
 .post-comments-icon {
   margin-left: 15px;
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
 
 .post-like span,
 .post-comments-icon span {
-  margin-left: 7px;
-}
+  margin-left: 7px; }
 
 .post-comment-box {
-  padding: 10px 10px;
-}
+  padding: 10px 10px; }
 
 .post-comment-box input {
   border: 1px solid #e0e0e0;
@@ -223,83 +187,60 @@
   width: 100%;
   font-size: 15px;
   box-sizing: border-box;
-  padding: 5px;
-}
+  padding: 5px; }
 
 .post-comment-box input:focus {
-  outline: none;
-}
+  outline: none; }
 
 .post-comments-list {
   padding: 5px 10px;
-  position: relative;
-}
+  position: relative; }
 
 .post-comment-item {
   background: #eceffa;
   border-radius: 4px;
   padding: 10px;
-  margin-bottom: 14px;
-}
+  margin-bottom: 14px; }
 
 .post-comment-header {
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
 
-.post-comment-author {
+.post-comment-header .post-comment-author {
   font-weight: 600;
   font-size: 12px;
   line-height: 16px;
-  color: #757575;
-  height: 20px;
-  width: 20px;
-}
-.post-comment-author img {
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-}
+  color: #757575; }
+
 .post-comment-header .post-comment-time {
   font-size: 12px;
   line-height: 16px;
   color: #9e9e9e;
-  margin-left: 8px;
-}
+  margin-left: 8px; }
 
 .post-comment-header .post-comment-likes {
   font-size: 12px;
   line-height: 16px;
   color: #616161;
-  margin-left: 8px;
-}
+  margin-left: 8px; }
 
 .post-comment-content {
-  margin-top: 7px;
-}
+  margin-top: 7px; }
 
 .post-comments-list .comment-like {
   position: absolute;
   right: 21px;
-  top: 13px;
-}
+  top: 13px; }
 
 .post-comments-list .comment-like img {
-  height: 20px;
-}
+  height: 20px; }
 
 .post-comments-list .comment-like img:hover {
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .delete-btn {
-  margin-left: auto;
-}
+  margin-left: auto; }
 
 .delete-post-btn {
   color: black;
-  font-size: larger;
-}
-.comment-avtar {
-  height: 40px;
-}
+  font-size: larger; }
