--- a/views/mailers/reset_password/reset_password.ejs
+++ b/views/mailers/reset_password/reset_password.ejs
@@ -2,5 +2,5 @@
 
 <p>As you have requested to reset password , here's the URL , please open the same in browser</p>
 
-<a href='http://34.207.154.78/auth/reset-password?accessToken=<%=accessToken.token%>'>http://34.207.154.78/auth/reset-password?accessToken=
+<a href='http://codeial99.herokuapp.com/auth/reset-password?accessToken=<%=accessToken.token%>'>http://codeial99.herokuapp.com/auth/reset-password?accessToken=
   <%=accessToken.token%></a>
